--- a/style.css
+++ b/style.css
@@ -13,13 +13,63 @@
 .sidebar{
     grid-row: 1 / 3;
     background-color: rgb(64, 138, 217);
+    display: grid;
+    grid-template-rows: 1fr 3fr 1.5fr;
+    padding-bottom: 110%;
+}
+.company-brand {
+    background-color: red;
+    display: grid;
+    justify-items: start;
+    align-items: center;
+    padding-left: 20px;
 }
 
+.company-brand img{
+    width: 60px;
+    height: 60px;
+}
+
+.nav {
+    background-color: bisque;
+    display: grid;
+    grid-template-rows: repeat(6, 1fr);
+    justify-items: start;
+    align-items: center;
+    padding-left: 50px;
+}
+
+.nav img{
+    width: 30px;
+    height: 30px;
+}
+
+.otehr-opetions{
+    background-color: aqua;
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    justify-items: start;
+    align-items: center;
+    padding-left: 50px;
+
+}
+
+.otehr-opetions img{
+    width: 30px;
+    height: 30px;
+}
+
+
+
+                                                    /*  HEADER SECTION  */
 .header {
     grid-column: 2 / 3;
     background-color: white;
+    
 }
 
+
+                                                    /* MAIN CONTENT SECTION  */
 .main {
     grid-row: 2 / 3;
     grid-column: 2 / 3;
